crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_qwik_conflict.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useStyles } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core/what";

export const hW = 12;
export const handleWatch = 42;

const componentQrl = () => console.log("not this", qrl());

componentQrl();
export const Foo = component$(
  () => {
    useStyles$("thing");
    const qwik = hW + handleWatch;
    console.log(qwik);
    const qrl = 23;
    return <div onClick$={() => console.log(qrl)} />;
  },
  {
    tagName: "my-foo",
  },
);

export const Root = component$(
  () => {
    useStyles($("thing"));
    return $(() => {
      return <div />;
    });
  },
  {
    tagName: "my-foo",
  },
);

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Root_component_XXXXXXXXXXXX");
import { qrl as qrl1 } from "@qwik.dev/core/what";
export const hW = 12;
export const handleWatch = 42;
const componentQrl1 = () => console.log("not this", qrl1());
componentQrl1();
export const Foo = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"),
  {
    tagName: "my-foo",
  },
);
export const Root = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Root_component_XXXXXXXXXXXX"),
  {
    tagName: "my-foo",
  },
);

=== test.tsx_Foo_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { hW } from "./test";
import { handleWatch } from "./test";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_div_q_e_click_XXXXXXXXXXXX");
export const Foo_component_XXXXXXXXXXXX = () => {
  useStyles$("thing");
  const qwik = hW + handleWatch;
  console.log(qwik);
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    {
      "q-e:click": /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_div_q_e_click_XXXXXXXXXXXX"),
    },
    null,
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Foo_component_div_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
export const Foo_component_div_q_e_click_XXXXXXXXXXXX = () => console.log(23);

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== test.tsx_Root_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
import { useStyles } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Root_component_1_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Root_component_useStyles_XXXXXXXXXXXX");
export const Root_component_XXXXXXXXXXXX = () => {
  useStyles(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Root_component_useStyles_XXXXXXXXXXXX"));
  return /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Root_component_1_XXXXXXXXXXXX");
};

/*
{
  "origin": "test.tsx",
  "name": "Root_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Root_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Root_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Root_component_useStyles_XXXXXXXXXXXX.js === (ENTRY)
export const Root_component_useStyles_XXXXXXXXXXXX = "thing";

/*
{
  "origin": "test.tsx",
  "name": "Root_component_useStyles_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Root_component_useStyles",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Root_component_useStyles_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Root_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== test.tsx_Root_component_1_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
export const Root_component_1_XXXXXXXXXXXX = () => {
  return /* @__PURE__ */ _jsxSorted("div", null, null, null, 3, "u6_1");
};

/*
{
  "origin": "test.tsx",
  "name": "Root_component_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Root_component_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Root_component_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Root_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
